--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,6 +14,9 @@ urls:
 twitter_username: monkstoneT
 github_username:  monkstone
 
+sass:
+    sass_dir: _sass
+
 syntax-highlighting:
   enabled: true
 # Build settings
